compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-4/neg/1.2.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 4 -> sentence 1
 * NUMBER: 2
 * DESCRIPTION: Real literals with dots separated by underscores.
 */

konst konstue = _._.0_0f
konst konstue = ._.0__0___0e1
konst konstue = ....0_0__0_0f

konst konstue = .._0
konst konstue = .______.0______0
konst konstue = _______.________00.0_0_0F

konst konstue = _001.._.0_0e10f
konst konstue = _4_.___.33__3.00__0E-10
konst konstue = __4_._44_.__._4.00___.___00E0
konst konstue = ____._____5.5.5_________5.0E-0
konst konstue = _._666_666.0____________.__________________________________________________________________________________________________________0e-0000000f
konst konstue = ____._.0_0__.0F
konst konstue = _.8_.8_.8_.8_.8_.8_.8_.8_.0000
konst konstue = .____.____9____.___9_____9____9___9__9_9.0f

konst konstue = _0_0_0_.0_0_0_0_0_0._.1234567890
konst konstue = ._9e-._10
konst konstue = __._234_.5_678.345______________678E+000001000000____
konst konstue = _._._3_456_7.4567E
konst konstue = _456.5_6F
konst konstue = _5.6_.0.5
konst konstue = ___6_54.7654e-0_.0
konst konstue = _7_6543.87654_3E+
konst konstue = ___._________._________876543_____________2.9_____________8765.432E-1100F
konst konstue = _.0_.9_____________87654321.098765432_____________1ef

konst konstue = _.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000___0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000_0F
konst konstue = _______________0._.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.0___000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-10
konst konstue = ___99999999999999999999.99999999999999999999999_______.________999999999999999999999999999999999999999999999.33333333333333333333333333333333333333333333333_33333333333333333333333333333333333333333E0
